<resources>
    <!-- Tasks Screen -->
    <string name="tasksScreenTitle">Tasks</string>
    <string name="newOrdersScreenTitle">Orders</string>
    <string name="newCallsScreenTitle">Calls</string>
    <string name="oldOrdersScreenTitle">Old Orders</string>
    <string name="oldCallsScreenTitle">Old Calls</string>

    <!-- Profile Screen -->
    <string name="profileScreenTitle">Profile</string>
    <string name="signOut">Sign Out</string>

    <!-- Auth Screen -->
    <string name="emailEmptyError">Email should not be empty</string>
    <string name="emailIsNotValid">Email is not valid</string>
    <string name="passwordEmptyError">Password should not be empty</string>
    <string name="password">Password</string>
    <string name="enterEmail">Email</string>
    <string name="signIn">Sign In</string>

    <!-- Custom pagination adapters -->
    <string name="refreshButton">Refresh</string>
    <string name="emptyText">Great work!\nNo tasks in list!</string>

    <!-- Orders List -->
    <string name="ordered">Ordered at %s</string>
    <string name="failedToParseDateTime">Failed to parse date and time</string>
    <string name="client">Client: %s</string>
    <string name="table">Table: %s</string>
    <string name="orderComment">Comment: %s</string>
    <string name="orderNoComment">Client left no comment</string>
    <string name="dishNumber">Dish number: %d</string>
    <string name="view">View</string>
    <string name="accept">Accept</string>
    <string name="couldNotAcceptSuborder">Could not accept suborder</string>

    <!-- Appeals List -->
    <string name="appealTitle">Called at %s</string>
    <string name="couldNotAcceptAppeal">Could not accept appeal</string>
    <string name="type">Type: %s</string>
    <string name="typeInfo">Consultation</string>
    <string name="typeBank">Bank payment</string>
    <string name="typeCash">Cash payment</string>
    <string name="typeUnknown">Not recognized</string>

    <!-- Suborder details -->
    <string name="suborderDetailsTitle">Suborder</string>

    <!-- All orders list -->
    <string name="allOrdersListTitle">All orders</string>
    <string name="status">Status: %s</string>
    <string name="statusActive">Active</string>
    <string name="statusPaid">Paid</string>
    <string name="statusCanceled">Canceled</string>
    <string name="statusUnknown">Unknown</string>

    <!-- Order details -->
    <string name="fullOrderScreenTitle">Full order</string>
    <string name="markAsPaid">Mark paid</string>

    <!-- Menu -->
    <string name="menuTitle">Menu</string>
    <string name="orderedCount" translatable="false">X %d</string>
    <string name="stopped">Stopped</string>

    <!-- Search Screen -->
    <string name="search">Search</string>
    <string name="searchTextHint">Search by name</string>
    <string name="clear">Clear</string>

</resources>