<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_brown_rounded_corners"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_8sdp"
    android:weightSum="22"
    tools:layout_marginHorizontal="@dimen/_32sdp">

    <TextView
        android:id="@+id/newOrdersTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/newOrdersScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_menu_book_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/newCallsTab"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newCallsTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/newCallsScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/oldOrdersTab"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/newOrdersTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oldOrdersTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/oldOrdersScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_outline_shopping_basket_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/oldCallsTab"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/newCallsTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oldCallsTab"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/oldCallsScreenTitle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_7ssp"
        app:drawableTopCompat="@drawable/ic_baseline_list_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/oldOrdersTab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newOrdersBadge"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_3ssp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="#008800"
        app:layout_constraintEnd_toEndOf="@id/newOrdersTab"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99" />

    <TextView
        android:id="@+id/newCallsBadge"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMinTextSize="@dimen/_3ssp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/brownExtraLight"
        app:layout_constraintEnd_toEndOf="@id/newCallsTab"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="99" />

</androidx.constraintlayout.widget.ConstraintLayout>