<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authScrollingContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <requestFocus />

        <ImageView
            android:id="@+id/logoImageAuth"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/stub"
            android:src="@drawable/logo_with_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldLayout"
            style="@style/InputStyle.NoTopHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageAuth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                style="@style/EditTextStyle.SingleLine.Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:nextFocusDown="@id/passwordField"
                android:nextFocusForward="@id/passwordField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            style="@style/InputStyle.NoTopHint.PasswordToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailFieldLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                style="@style/EditTextStyle.SingleLine.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/App.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="12dp"
            android:text="@string/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout" />

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>